유지보수 요청 관련 기능 구현

--- a/bin/main/application-dev.properties
+++ b/bin/main/application-dev.properties
@@ -12,7 +12,8 @@ spring.datasource.password=bitc5600!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # --- JPA ---
-spring.jpa.hibernate.ddl-auto=none      # Flyway 사용
+spring.jpa.hibernate.ddl-auto=none      
+# Flyway 사용
 spring.jpa.open-in-view=false
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
@@ -30,3 +31,14 @@ spring.flyway.sql-migration-suffixes=.sql
 # --- Logging (필요 시 프로파일별로 재정의 가능) ---
 logging.level.org.flywaydb=INFO
 logging.level.org.hibernate.SQL=INFO
+
+
+spring.cloud.aws.s3.enabled=false
+
+# S3 관련 내 개발용 설정 (dev)
+storage.bucket=juvis-maintenance-dev
+storage.presign-exp-seconds=900
+
+# spring.cloud.aws.region.static=ap-northeast-2
+# spring.cloud.aws.s3.region=ap-northeast-2
+
