--- a/bin/main/application-prod.properties
+++ b/bin/main/application-prod.properties
@@ -25,7 +25,7 @@ spring.datasource.hikari.keepalive-time=300000
 spring.datasource.hikari.pool-name=HikariProdPool
 
 # ---------- JPA / Hibernate ----------
-spring.jpa.hibernate.ddl-auto=none        
+spring.jpa.hibernate.ddl-auto=validate
 # Flyway 사용, 스키마 자동생성 금지
 spring.jpa.show-sql=false                 
 # 운영에서 SQL 로그 비활성화
@@ -47,6 +47,11 @@ logging.level.org.hibernate.type.descriptor.sql=INFO
 # ---------- Server ----------
 server.port=${PORT:8080}
 server.forward-headers-strategy=framework
+
+# S3 관련 내 개발용 설정 (dev)
+app.s3.bucket=juvis-upload-dev
+app.s3.presign-exp-seconds=900
+app.s3.region=ap-northeast-2
 
 # ---------- Actuator (선택: 헬스체크) ----------
 management.endpoints.web.exposure.include=health,info
