--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -12,7 +12,7 @@ spring.datasource.password=bitc5600!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # --- JPA ---
-spring.jpa.hibernate.ddl-auto=none      
+spring.jpa.hibernate.ddl-auto=update     
 # Flyway 사용
 spring.jpa.open-in-view=false
 spring.jpa.show-sql=false
@@ -36,8 +36,9 @@ logging.level.org.hibernate.SQL=INFO
 spring.cloud.aws.s3.enabled=false
 
 # S3 관련 내 개발용 설정 (dev)
-storage.bucket=juvis-maintenance-dev
-storage.presign-exp-seconds=900
+app.s3.bucket=juvis-upload-dev
+app.s3.presign-exp-seconds=900
+app.s3.region=ap-northeast-2
 
 # spring.cloud.aws.region.static=ap-northeast-2
 # spring.cloud.aws.s3.region=ap-northeast-2
