--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -43,3 +43,5 @@ app.s3.region=ap-northeast-2
 # spring.cloud.aws.region.static=ap-northeast-2
 # spring.cloud.aws.s3.region=ap-northeast-2
 
+firebase.enabled=true
+firebase.service-account=classpath:firebase/serviceAccount.json
