--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -56,3 +56,6 @@ app.s3.region=ap-northeast-2
 # ---------- Actuator (선택: 헬스체크) ----------
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=never
+
+firebase.enabled=true
+firebase.service-account=file:/opt/juvis/firebase-service-account.json
