분야 최종 완료

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -45,3 +45,5 @@ app.s3.region=ap-northeast-2
 
 firebase.enabled=true
 firebase.service-account=classpath:firebase/serviceAccount.json
+
+server.address=0.0.0.0
