--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,61 +1,82 @@
 # =========================================================
 # Profile: prod  (AWS RDS / MySQL + Flyway)
-# 파일 경로: src/main/resources/application-prod.properties
+# File: src/main/resources/application-prod.properties
 # =========================================================
 
-# ---------- DataSource (RDS/MySQL) ----------
-# 예) jdbc:mysql://mydb.xxxxxx.ap-northeast-2.rds.amazonaws.com:3306/maintenance_app
-spring.datasource.url=jdbc:mysql://${RDS_ENDPOINT:mydb.xxxxxx.ap-northeast-2.rds.amazonaws.com}:3306/maintenance_app?serverTimezone=Asia/Seoul&characterEncoding=utf8&useUnicode=true&useSSL=true&sslMode=VERIFY_IDENTITY&enabledTLSProtocols=TLSv1.2
-spring.datasource.username=${RDS_USERNAME:admin}
-spring.datasource.password=${RDS_PASSWORD:change-me}
+spring.application.name=maintenance-app
+
+# ---------------------------------------------------------
+# DataSource (AWS RDS / MySQL)
+# ---------------------------------------------------------
+spring.datasource.url=jdbc:mysql://${RDS_ENDPOINT}:3306/maintenance_app?serverTimezone=Asia/Seoul&characterEncoding=utf8&useUnicode=true&sslMode=DISABLED
+spring.datasource.username=${RDS_USERNAME}
+spring.datasource.password=${RDS_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# ---------- HikariCP (권장 커넥션풀 설정) ----------
-spring.datasource.hikari.minimum-idle=${HIKARI_MIN_IDLE:3}
-spring.datasource.hikari.maximum-pool-size=${HIKARI_MAX_POOL:10}
-spring.datasource.hikari.idle-timeout=600000          
-# 10분
-spring.datasource.hikari.max-lifetime=1800000         
-# 30분 (RDS wait_timeout 고려)
-spring.datasource.hikari.connection-timeout=30000     
-# 30초
+# ---------------------------------------------------------
+# HikariCP
+# ---------------------------------------------------------
+spring.datasource.hikari.minimum-idle=3
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.validation-timeout=5000
-spring.datasource.hikari.keepalive-time=300000        
-# 5분
+spring.datasource.hikari.keepalive-time=300000
 spring.datasource.hikari.pool-name=HikariProdPool
 
-# ---------- JPA / Hibernate ----------
+# ---------------------------------------------------------
+# JPA / Hibernate
+# ---------------------------------------------------------
 spring.jpa.hibernate.ddl-auto=validate
-# Flyway 사용, 스키마 자동생성 금지
-spring.jpa.show-sql=false                 
-# 운영에서 SQL 로그 비활성화
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.open-in-view=false
 
-# ---------- Flyway ----------
+# ---------------------------------------------------------
+# Flyway
+# ---------------------------------------------------------
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
 spring.flyway.sql-migration-prefix=V
 spring.flyway.sql-migration-suffixes=.sql
 
-# ---------- Logging ----------
+# ---------------------------------------------------------
+# Logging
+# ---------------------------------------------------------
 logging.level.org.flywaydb=INFO
 logging.level.org.hibernate.SQL=INFO
 logging.level.org.hibernate.type.descriptor.sql=INFO
 
-# ---------- Server ----------
-server.port=${PORT:8080}
+# ---------------------------------------------------------
+# Server
+# ---------------------------------------------------------
+server.port=8080
+server.address=0.0.0.0
 server.forward-headers-strategy=framework
 
-# S3 관련 내 개발용 설정 (dev)
+# ---------------------------------------------------------
+# Spring MVC / Error Handling
+# ---------------------------------------------------------
+spring.mvc.throw-exception-if-no-handler-found=false
+spring.web.resources.add-mappings=true
+
+# ---------------------------------------------------------
+# S3
+# ---------------------------------------------------------
 app.s3.bucket=juvis-upload-dev
 app.s3.presign-exp-seconds=900
 app.s3.region=ap-northeast-2
 
-# ---------- Actuator (선택: 헬스체크) ----------
+# ---------------------------------------------------------
+# Actuator
+# ---------------------------------------------------------
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=never
 
+# ---------------------------------------------------------
+# Firebase
+# ---------------------------------------------------------
 firebase.enabled=true
 firebase.service-account=file:/opt/juvis/firebase-service-account.json
