--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,19 +1,20 @@
-# ===== Common (profile-agnostic) =====
+# ===== Common (local/dev default) =====
 spring.application.name=maintenance-app
+
 server.port=8080
 server.forward-headers-strategy=framework
+server.address=0.0.0.0
 
 # ---------------------------------------------------------
-# DataSource (MySQL)
+# DataSource (Local MySQL)
 # ---------------------------------------------------------
-spring.datasource.url=jdbc:mysql://localhost:3306/maintenance_app?serverTimezone=Asia/Seoul&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://localhost:3306/maintenance_app?serverTimezone=Asia/Seoul&characterEncoding=utf8&useUnicode=true
 spring.datasource.username=root
 spring.datasource.password=bitc5600!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # --- JPA ---
-spring.jpa.hibernate.ddl-auto=update     
-# Flyway 사용
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
@@ -27,23 +28,22 @@ spring.flyway.baseline-on-migrate=true
 spring.flyway.sql-migration-prefix=V
 spring.flyway.sql-migration-suffixes=.sql
 
-
-# --- Logging (필요 시 프로파일별로 재정의 가능) ---
+# --- Logging ---
 logging.level.org.flywaydb=INFO
 logging.level.org.hibernate.SQL=INFO
 
+# ---------- Spring MVC / Error handling ----------
+# ✅ 404를 예외로 던지지 않음 (기본 404 유지)
+spring.mvc.throw-exception-if-no-handler-found=false
+spring.web.resources.add-mappings=true
 
+# --- AWS S3 (로컬에서는 끔) ---
 spring.cloud.aws.s3.enabled=false
 
-# S3 관련 내 개발용 설정 (dev)
 app.s3.bucket=juvis-upload-dev
 app.s3.presign-exp-seconds=900
 app.s3.region=ap-northeast-2
 
-# spring.cloud.aws.region.static=ap-northeast-2
-# spring.cloud.aws.s3.region=ap-northeast-2
-
+# --- Firebase (로컬) ---
 firebase.enabled=true
 firebase.service-account=classpath:firebase/serviceAccount.json
-
-server.address=0.0.0.0
